@@ -362,6 +362,10 @@ Globally available substitutions
     (DEPRECATED) the directory where sdist-packages will be copied to so that
     they may be accessed by other processes or tox runs.
 
+``{:}``
+    OS-specific path separator (``:`` os *nix family, ``;`` on Windows). May be used in `setenv`,
+    when target variable is path variable (e.g. PATH or PYTHONPATH).
+
 substitutions for virtualenv-related sections
 +++++++++++++++++++++++++++++++++++++++++++++
 
