@@ -1887,6 +1887,35 @@ class TestIndexServer:
         assert config.indexserver['default'].url == expected
         assert config.indexserver['local1'].url == config.indexserver['default'].url
 
+    def test_replace_pathsep_unix(self, monkeypatch, newconfig):
+        monkeypatch.setattr('os.pathsep', ':')
+        config = newconfig("""
+        [testenv]
+        setenv =
+            PATH = dira{:}dirb{:}dirc
+        """)
+        envconfig = config.envconfigs["python"]
+        assert envconfig.setenv["PATH"] == "dira:dirb:dirc"
+
+    def test_replace_pathsep_win(self, monkeypatch, newconfig):
+        monkeypatch.setattr('os.pathsep', ';')
+        config = newconfig("""
+        [testenv]
+        setenv =
+            PATH = dira{:}dirb{:}dirc
+        """)
+        envconfig = config.envconfigs["python"]
+        assert envconfig.setenv["PATH"] == "dira;dirb;dirc"
+
+    def test_pathsep_regex(self):
+        """Sanity check for regex behavior for empty colon."""
+        regex = tox.config.Replacer.RE_ITEM_REF
+        match = next(regex.finditer("{:}"))
+        mdict = match.groupdict()
+        assert mdict['sub_type'] is None
+        assert mdict['substitution_value'] == ""
+        assert mdict['default_value'] == ""
+
 
 class TestParseEnv:
 
